--- a/2023 mogakso/week1/1, 2단원.md
+++ b/2023 mogakso/week1/1, 2단원.md
@@ -6,7 +6,7 @@
 1) **F10**: 프로시저 단위 실행<br>
 2)   **F11** : 한 단계씩 코드실행(함수 안으로 들어가도록 할 때 사용) 
 -> 예를 들어 F11을 사용하면 내부 for문을 계속 i=0~n까지 순환하도록 할 수 있다. f10은 내부 for문을 무시할 것이다.<br>
-3)  *F9** : 중단점 삽입/삭제<br>
+3)  **F9** : 중단점 삽입/삭제<br>
 4)  **F5/SHIFT+F5** : 디버깅시작/중지<br>
 
 +) 의도치 않은 정답으로 음수가 출력되면 변수 범위 초과 생각
