Update 4단원(퀵, 병합, 기수 정렬).md

--- a/2023 mogakso/week1/4단원(퀵, 병합, 기수 정렬).md
+++ b/2023 mogakso/week1/4단원(퀵, 병합, 기수 정렬).md
@@ -180,8 +180,8 @@ int main() {
     ios::sync_with_stdio(false);
     cin.tie(NULL);
     cout.tie(NULL);
-    // 벡터의 길이를 설정할 때는
-    // 변수가 아닌, 무조건 상수를 사용해야 한다.
+    // 배열의 길이를 설정할 때는 상수를 사용한다.
+    // 벡터는 상관없다.
     
     vector<int> a = { 7, 6, 5, 8, 3, 5, 9, 1 };
 
