--- a/2023 mogakso/week3/+) 활동내용.md
+++ b/2023 mogakso/week3/+) 활동내용.md
@@ -1,1 +1,4 @@
-
+활동내용 : 
+1) 매개변수와 시간초과 간의 관계에 대해 토의(call-by-reference, 2차원 배열 등)해보고, 팀원들과 같이 틀렸던 문제에 대한 코드를 다시 작성해보았다.
+2) 재귀함수를 통해 stack의 구조를 모방하여 DFS 구현하였을 때와 재귀함수를 통해 단순히 DFS를 구현하였을 때의 실행순서 차이점에 대해 이야기해보았다. 이어서 DFS를 stack으로 직접 구현해보며 stack의 .top(), .pop() 등의 stack 함수에 대해 숙지하였다.
+3) 조금 더 효율적으로 토의해보는 방법(토의형식, 발표형식 등)을 얘기해보았다.
