--- a/2023 mogakso/week3/6단원(그리디 알고리즘, 11047).md
+++ b/2023 mogakso/week3/6단원(그리디 알고리즘, 11047).md
@@ -50,7 +50,7 @@ int main(void)
     for (int i = N-1; i >=0; i--) {
     
     // 전체 값보다 작은 동전 중, 가장 큰 동전이 보이는 경우
-        if (K > coin[i]) {
+        if (K >= coin[i]) {
             cnt += K / coin[i];
             
     // 다음 사이클을 돌 때 나머지 값을 사용하기 위해서
