Update 8단원(다익스트라 알고리즘 개념).md

--- a/2023 mogakso/week4/8단원(다익스트라 알고리즘 개념).md
+++ b/2023 mogakso/week4/8단원(다익스트라 알고리즘 개념).md
@@ -214,7 +214,7 @@ int main() {
 ```
 
 ---
-군대 가기 전에 수강한 자료구조 수업에서 다익스트라 알고리즘을 들었던 기억이 있다. 근데 기억이 안나서 하나하나 쓰고 그리고 구현해보면서 이해하느라 시간이 좀 걸렸다.
+군대 가기 전에 수강한 자료구조 수업에서 다익스트라 알고리즘을 들었던 기억이 있다. 근데 기억이 안나서 하나하나 그려보고 구현해보면서 이해하느라 시간이 좀 걸렸다.
 
 복습이 필수일 듯..
 
