--- a/2023 mogakso/week4/8단원(다익스트라, 1753).md
+++ b/2023 mogakso/week4/8단원(다익스트라, 1753).md
@@ -106,12 +106,13 @@ int main() {
 ```
 
 ---
-해당 문제는 오랜 시간 다익스트라 알고리즘의 늪에서 나를 잡았던 문제이다.
+이 문제가 시간초과가 떠서 오랫동안 고민했다ㅠㅠ.
 내 생각이 며칠동안 꼬이게 된 부분은 우선 순위 큐를 이용하는 pq.first, pq.second 부분이었다.
 
-구현 시에 그냥 자연스럽게 우선 순위 큐의 first 부분에 최소 거리의 index가 오도록 하였고, second 부분에는
-최소 거리의 해당 거리 값이 오도록 설정하였다.
-→ 이 부분에는 몇 가지 문제가 있었다.
-1) 우선 pq를 우선순위 큐로서 minheap 형태로 정리하는 경우에는 first를 기준으로 오름차순 정렬되므로, 내가 잘못 작성했던 코드는 최소 index 순으로 정렬된 상태였을 것이다.
-2) 최소 index 순으로 정렬했어도 방문 여부를 체크하지 않고, 모든 경우를 조사하므로 명확한 값은 나온다. min_val_index를 기준으로 정렬하고자 한다면, 방문 여부를 체크하는 배열(혹은 벡터)를 생성하여 조사하면 됐을 것이다.
-3) 최소 거리 순으로 정렬되도록 코드를 위와 같이 작성하면 시간복잡도 문제에서 해결 될 수 있다.
+구현 시에 그냥 자연스럽게 우선 순위 큐의 first 부분에 최소 거리의 index가 오도록 하였고, second 부분에는 최소 거리의 해당 거리 값이 오도록 설정하였다.
+
+→ 이 부분에는 문제가 있었다.
+
+> 1) 우선 pq를 우선순위 큐로서 minheap 형태로 정리하는 경우에는 pq에서 pair의 first를 기준으로 오름차순 정렬되므로, 내가 잘못 작성했던 코드는 최소 index 순으로 정렬된 상태였을 것이다.
+> 2) 최소 index 순으로 정렬했어도 방문 여부를 체크하지 않았고, 모든 경우를 조사하므로 명확한 값은 나온다. min_val_index(작은 값의 인덱스)를 기준으로 정렬하고자 한다면, 방문 여부를 체크하는 배열(혹은 벡터)를 생성하여 조사하면 됐을 수 있다.
+> 3) 즉, 최소 거리 순으로 정렬되도록 코드를 위와 같이 작성하면 시간복잡도 문제에서 해결 될 수 있다.
