오류 수정 및 추가 주석

--- a/2023 mogakso/week4/8단원(다익스트라 알고리즘 개념).md
+++ b/2023 mogakso/week4/8단원(다익스트라 알고리즘 개념).md
@@ -103,7 +103,8 @@ int main() {
 <br>
 
 ### ex_2) 우선순위 큐로 구현한 코드(시간 복잡도 : O(ElogV), (노드 수 : V, 에지 수 : E))
->설명 부분은 주석으로 작성하였습니다.
+#### ex_2.1) 잘못된 코드, 설명 부분은 아래 글과 주석으로 작성하였습니다.
+
 
 ```
 #include <algorithm>
@@ -132,15 +133,15 @@ void dijkstra(int start) {
     priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> pq;
 
     // 출발 노드의 정보를 우선순위 큐에 넣는다.
-    pq.push(make_pair(start, 0));
-
+    pq.push(make_pair(startIndex, 0));//(ex_2.2.에서 변경되는 핵심 부분)
+	
     while (!pq.empty()) {
 
-        // 기준 점부터 가장 최소 거리 노드의 index
+        // 기준 점부터 가장 최소 거리 노드의 index (X)
         int current = pq.top().first;
 
         // 기준 점부터 가장 최소 거리 노드의 값
-        int distance = pq.top().second;
+        int distance = pq.top().second; (X)
         pq.pop();
 
         // 최단 거리가 아닌 경우 스킵
@@ -213,15 +214,72 @@ int main() {
 
 ```
 
+>위 코드는 ex_1)보단 낫고, 결과 값이 명확하게 나온다. 하지만 비효율적인 코드이다. 
+>
+>왜냐하면, 아래 코드는 방문 여부를 체크하지 않고, priority_queue의 first 부분에 최소 거리 노드의 index를 넣었기 때문이다. 
+>
+>first 부분인 노드의 index를 기준으로 오름차순으로 정렬이 되기 때문에, 기준으로서 큰 의미가 없어진다. 그렇게 들렀던 부분일지라도 하나하나 비교하게 되는 경우가 생길 수 있을 것이다. 
+>
+> 따라서, distance를 기준으로 정렬될 수 있도록 pq.first 부분에 최소 거리를, pq.second 부분에 최소 거리 노드의 index를 넣는 식으로 코드를 수정한다.
+
+
+
+#### ex_2.2) 제대로 된 다익스트라 알고리즘 코드
+
+
+```
+void dijkstra(int startIndex) {
+
+    // 시작점에서 시작점으로의 최소 거리는 0
+    d[startIndex] = 0;
+
+    // min heap 구조, 더 작은 값을 기준으로 최상단 노드를 만들도록 한다.
+    priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> pq;
+
+    // 출발 노드의 정보를 우선순위 큐에 넣는다.
+    pq.push(make_pair(0, startIndex)); 
+    // 우선순위 큐는 first 값을 기준 정렬되므로, 위와 같이 수정한다.
+    
+    while (pq.empty()==false) {
+
+        // 기준 점부터 가장 최소 거리 노드의 index
+        int current = pq.top().second;
+
+        // 기준 점부터 가장 최소 거리 노드의 값
+        int distance = pq.top().first;
+        pq.pop();
+
+        // 최단 거리가 아닌 경우 스킵
+        if (d[current] < distance) continue;
+
+		// pq 내부에 여러 개가 들어가도록 하고, 위 코드에서 가장 최소에 대한 값을
+		// distance, current에 넣는다.
+        for (int i = 0; i < a[current].size(); i++) { 
+
+            // 선택된 노드의 인적노드
+            int nextIndex = a[current][i].first;
+
+            // 선택된 노드를 거쳐서 인접 노드로 가는 거리
+            int nextDistance = distance + a[current][i].second;
+
+            // 기존 최소 비용보다 더 작다면 교체
+            if (nextDistance < d[nextIndex]) {
+                d[nextIndex] = nextDistance;
+
+                // 그렇게 새롭게 갱신된 값을 넣어준다.
+                pq.push(make_pair(nextDistance, nextIndex));
+            }
+        }
+
+    }
+}
+```
 ---
-군대 가기 전에 수강한 자료구조 수업에서 다익스트라 알고리즘을 들었던 기억이 있다. 근데 기억이 안나서 하나하나 그려보고 구현해보면서 이해하느라 시간이 좀 걸렸다.
+군대 가기 전에 수강한 자료구조 수업에서 다익스트라 알고리즘을 들었던 기억이 있다. 근데 기억이 안나서 하나하나 쓰고 그리고 구현해보면서 이해하느라 시간이 좀 걸렸다.
 
 복습이 필수일 듯..
 
----
-
 참고 : 
-
 ex_1) [동빈나 네이버 블로그](https://blog.naver.com/ndb796/221234424646)
 
 gif) https://surfingthecode.com/5-dutch-programmers-you-should-know/
