Update 8단원(벨만-포드 개념, 11657).md

--- a/2023 mogakso/week5/8단원(벨만-포드 개념, 11657).md
+++ b/2023 mogakso/week5/8단원(벨만-포드 개념, 11657).md
@@ -1,8 +1,11 @@
 ## 1. 벨만-포드 알고리즘(Bellman-Ford Algorithm)
 > **시간 복잡도 : O(VE)** 
 
-최단거리를 구하는 알고리즘으로, 다익스트라 알고리즘과 다르게 음수의 간선이 존재하는 경우에도 수행 가능하다. 
+1) 최단거리를 구하는 알고리즘으로, 다익스트라 알고리즘과 다르게 음수의 간선이 존재하는 경우에도 수행 가능하다. 
 
+2) 시간은 오래 걸리지만 음수 사이클을 탐지할 수 있다. 
+
+3) 방문하지 않은 노드를 찾아다니는 그리디스러운 다익스트라와는 다르게 매번 모든 간선을 확인한다.
 
 ### ex) 벨만-포드 알고리즘 예제([백준 11657](https://www.acmicpc.net/problem/11657))
 > 
