보충 설명 및 오타 수정

--- a/2023 mogakso/week1/4단원(퀵, 병합, 기수 정렬).md
+++ b/2023 mogakso/week1/4단원(퀵, 병합, 기수 정렬).md
@@ -10,11 +10,11 @@
 ### **ex) {3, 7, 8, 1, 5, 9, 6, 10, 2, 4} 정렬하기**
 ex)에서는 pivot을 맨 앞으로 두고 정렬을 진행하였다. 
 >1) a[pivot]은 vector의 첫 번째 값으로 설정한다.
-2) i는 a[pivot]보다 a[i]가 큰 값이 나올 때까지 i++되며 vector를 조사한다.
-3) j는 a[pivot]보다 a[j]가 작은 값이 나올 때까지 j--되며 vector를 조사한다.
-4) i와 j가 엇갈리게 되는 순간, a[pivot] 값과 a[j](작은 값) 값을 swap한다.
-**+) 바뀌게 된 a[pivot] 값의 좌측에는 a[pivot]보다 작은 값이, 우측에는 a[pivot]보다 큰 값이 존재하게 된다.**
-5) 재귀함수를 통해 좌, 우 값들을 반복적으로 정렬시킨다.
+>2) i는 a[pivot]보다 a[i]가 큰 값이 나올 때까지 i++되며 vector를 조사한다.
+>3) j는 a[pivot]보다 a[j]가 작은 값이 나올 때까지 j--되며 vector를 조사한다.
+>4) i와 j가 엇갈리게 되는 순간, a[pivot] 값과 a[j](작은 값) 값을 swap한다.
+>**+) 바뀌게 된 a[pivot] 값의 좌측에는 a[pivot]보다 작은 값이, 우측에는 a[pivot]보다 큰 값이 존재하게 된다.**
+>5) 재귀함수를 통해 좌, 우 값들을 반복적으로 정렬시킨다.
 
 ![](https://velog.velcdn.com/images/blueshj610/post/94a7624d-f35f-4c37-81b9-88591702cef8/image.jpg)
 
@@ -104,12 +104,11 @@ int main() {
 ### **ex) {6, 7, 3, 5, 8} 정렬하기**
 
 > 
-** 병합되는 과정**은 아래와 같다.
->
-1) 두 개의 벡터의 값을 처음 위치부터 비교한다.
-2) 그 중 작은 값을 새로운 벡터로 옮긴다.
-3) 두 벡터 중 하나의 벡터가 끝날 때까지 반복한다.
-4) 하나의 벡터가 끝나면, 나머지 벡터의 값은 새로운 벡터로 옮긴다.
+**병합되는 과정**은 아래와 같다.
+>1) 벡터가 반복적(재귀)으로 나뉘게 된다.
+>2) 나뉜 한 개의 요소를 갖게 된 작은 값들을 (비교 + 합쳐)가며 sorted 벡터에 옮겨두고, sorted 벡터를 다 a 벡터로 옮겨둔다.
+>+) 왜냐하면, 그 순간 과정에 정렬된 부분을 a 벡터에 저장한 것이 이 후 정렬에 또 활용되기 때문이다.
+>3) 처음 주어진 벡터에서 절반의 2개 벡터가 각각 정렬이 되었다면, 그 두 벡터끼리 비교해가며 오름차순이 되도록 sorted 벡터에 대입한다.
 
 ![](https://velog.velcdn.com/images/blueshj610/post/36194f78-43af-4e2a-8e25-a8ad3fe66c2b/image.jpg)
 
@@ -200,10 +199,9 @@ int main() {
 >**queue의 FIFO** 구조를 활용한다. 정렬되는 과정은 다음과 같다.
 >
 > 1) 1의 자릿수를 비교하여 QUEUE에 자리에 맞게 대입한다.
-2) 비교된 자릿수대로 queue(FIFO)의 구조에 따라 index 순서대로 vec에 옮겨둔다.
-2.1) 그렇다면 vec은 1의 자릿수 기준으로 정렬된 형태가 될 것이다.
-3) 10의 자릿수를 비교... 100의 자릿수를 비교... 반복한다.
-
+>2) 비교된 자릿수대로 queue(FIFO)의 구조에 따라 index 순서대로 vec에 옮겨둔다.
+>2.1) 그렇다면 vec은 1의 자릿수 기준으로 정렬된 형태가 될 것이다.
+>3) 10의 자릿수를 비교... 100의 자릿수를 비교... 반복한다.
 
 
 ![](https://velog.velcdn.com/images/blueshj610/post/d677a624-c4a1-4589-9cd3-c0ebc73d501f/image.jpg)
