--- a/2023 mogakso/week6/+) 6단원 보충(그리디, 1541).md
+++ b/2023 mogakso/week6/+) 6단원 보충(그리디, 1541).md
@@ -1,7 +1,7 @@
-목표로 설정했던 책 진도를 다 나가서 이번 주는 개인적으로 보충하고자 하는 부분을 공부했다.
+목표로 설정했던 책 진도를 다 나가서 이번 주는 개인적으로 보충하고자 하는 부분을 공부했다
 
 당장 9월부터 시작하는 알고리즘 수업 계획서를 보니 그리디 알고리즘이 포함되어 있기도 했고, 개인적으로 그리디 알고리즘
-문제를 풀긴 푸는데 어딘가 모호한 느낌도 들었기 때문에 해당 주제를 설정했다.
+문제를 풀 때 어딘가 모호한 느낌도 들었기 때문에 해당 주제를 설정했다.
 
 ---
 ## 6. 그리디 알고리즘
