Update 백준(공식, 문법, 간단한 생각).md

--- a/백준(공식, 문법, 간단한 생각).md
+++ b/백준(공식, 문법, 간단한 생각).md
@@ -1,5 +1,5 @@
 
-[백준(공식, 문법, 간단한 생각)](https://www.notion.so/invite/5db282a53aaf4a18e59de12b03a8955dc897c11c)을 풀면서 유용하게 사용했던 부분을 정리합니다.
+[백준(공식, 문법, 간단한 생각)](https://www.notion.so/cfbe995a70664ad9a6be4926a766585e?pvs=4)을 풀면서 유용하게 사용했던 부분을 정리합니다.
 
 ---
 
